--- a/playbooks/hosts.yml
+++ b/playbooks/hosts.yml
@@ -1,3 +1,5 @@
 controllers:
   hosts:
-    control.prc.local:
+    EQ-homelab-01:
+      ansible_host: 10.0.0.163
+      ansible_ssh_private_key_file: secrets/ansible-user.controller.key
