Added uninstall operations

--- a/playbooks/k3s.yml
+++ b/playbooks/k3s.yml
@@ -18,7 +18,7 @@
   
   - name: Enable ports
     community.general.ufw:
-      rule: limit
+      rule: allow
       port: "{{ item }}"
       proto: tcp
     loop:
