--- a/playbooks/hosts.yml
+++ b/playbooks/hosts.yml
@@ -2,4 +2,4 @@ controllers:
   hosts:
     EQ-homelab-01:
       ansible_host: 10.0.0.163
-      ansible_ssh_private_key_file: secrets/ansible-user.controller.key
+      ansible_ssh_private_key_file: secrets/ssh-keys/ansible-user.controller.key
