--- a/playbooks/k3s.yml
+++ b/playbooks/k3s.yml
@@ -24,7 +24,7 @@
     loop:
       - 22
       - 6443
-      - 31627
+      - 32128
 
   - name: Enable Applications
     community.general.ufw:
@@ -61,29 +61,57 @@
       name: kubernetes-dashboard
       repo_url: "https://kubernetes.github.io/dashboard/"
   
+  - name: Create kubernetes-dashboard namespace
+    shell: kubectl create namespace kubernetes-dashboard
+    ignore_errors: yes
+
+  - name: Make directories
+    shell: mkdir kubernetes-dashboard && mkdir kubernetes-dashboard/secrets
+    ignore_errors: yes
+
+  - name: Copy Kubernetes Dashboard TLS cert and key
+    copy: 
+      src: kubernetes-dashboard/secrets/{{ item }}
+      dest: kubernetes-dashboard/secrets/
+    loop:
+      - tls.crt
+      - tls.key
+
+  - name: Create kubernetes secrets
+    shell: kubectl create secret generic kubernetes-dashboard-certs --from-file=kubernetes-dashboard/secrets/ -n kubernetes-dashboard
+    ignore_errors: yes
+
+  - name: Delete ssl cert and key
+    shell: rm -rf kubernetes-dashboard/secrets/
+
+  - name: Copy in values file
+    copy: 
+      src: kubernetes-dashboard/values.yml
+      dest: kubernetes-dashboard/values.yml
+
   - name: Deploy Kubernetes Dashboard
     kubernetes.core.helm:
       name: kubernetes-dashboard
       chart_ref: kubernetes-dashboard/kubernetes-dashboard
       release_namespace: kubernetes-dashboard
-      create_namespace: true
+      create_namespace: false
+      values_files:
+        - kubernetes-dashboard/values.yml
 
-  - name: Copy in kubernetes templates for Kubernetes dashboard service account
+  - name: Copy in kubernetes templates for Kubernetes dashboard 
     copy:
-      src: "{{ item }}"
-      dest: "{{ item }}"
+      src: kubernetes-dashboard/{{ item }}
+      dest: kubernetes-dashboard/{{ item }}
     loop:
       - serviceaccount.yml
       - clusterrolebinding.yml
       - secret.yml
-      - service.yml
 
-  - name: Setup Kubernetes dashboard service account
-    shell: kubectl apply -f {{ item }}
+  - name: Setup Kubernetes dashboard
+    shell: kubectl apply -f kubernetes-dashboard/{{ item }}
     loop:
       - serviceaccount.yml
       - clusterrolebinding.yml
       - secret.yml
-      - service.yml
 
   
