--- a/playbooks/files/pihole/docker-compose.yml
+++ b/playbooks/files/pihole/docker-compose.yml
@@ -4,18 +4,17 @@ services:
     image: pihole/pihole:latest
     # For DHCP it is recommended to remove these ports and instead add: network_mode: "host"
     ports:
-      - "9995:53/tcp"
-      - "9995:53/udp"
-      - "9967:67/udp" # Only required if you are using Pi-hole as your DHCP server
+      - "53:53/tcp"
+      - "53:53/udp"
       - "9999:80/tcp"
     environment:
       TZ: 'America/Chicago'
+      FTLCONF_LOCAL_IPV4: 10.0.0.163
+      PIHOLE_DNS_: 8.8.8.8
       # WEBPASSWORD: 'set a secure password here or it will be random'
     # Volumes store your data between container upgrades
     volumes:
       - './etc-pihole:/etc/pihole'
       - './etc-dnsmasq.d:/etc/dnsmasq.d'
     #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
-    cap_add:
-      - NET_ADMIN # Required if you are using Pi-hole as your DHCP server, else not needed
     restart: unless-stopped
