Setup grafana and promtail

--- a/playbooks/files/cron/archive-notion/docker-compose.yml
+++ b/playbooks/files/cron/archive-notion/docker-compose.yml
@@ -3,5 +3,5 @@ services:
     container_name: archive-notion
     build: .
     volumes:
-      - './archive-tasks:/tmp/archive-tasks'
+      - '/home/ansible-user/cron/archive-notion/archive-tasks:/tmp/archive-tasks'
     restart: no
