--- a/playbooks/files/pihole/docker-compose.yml
+++ b/playbooks/files/pihole/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       # WEBPASSWORD: 'set a secure password here or it will be random'
     # Volumes store your data between container upgrades
     volumes:
-      - './etc-pihole:/etc/pihole'
-      - './etc-dnsmasq.d:/etc/dnsmasq.d'
+      - '/home/ansible-user/pihole/etc-pihole:/etc/pihole'
+      - '/home/ansible-user/pihole/etc-dnsmasq.d:/etc/dnsmasq.d'
     #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
     restart: unless-stopped
