--- a/playbooks/files/portainer/docker-compose.yml
+++ b/playbooks/files/portainer/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   portainer:
     image: portainer/portainer-ce:2.21.1
+    container_name: portainer
     ports:
       - 9443:9443
     volumes:
