--- a/playbooks/files/cron/archive-notion/docker-compose.yml
+++ b/playbooks/files/cron/archive-notion/docker-compose.yml
@@ -1,7 +1,9 @@
 services:
   archive-notion:
     container_name: archive-notion
-    build: .
+    build:
+      context: .
+      no_cache: yes
     volumes:
       - '/home/ansible-user/cron/archive-notion/archive-tasks:/tmp/archive-tasks'
     restart: no
