--- a/playbooks/setup.yml
+++ b/playbooks/setup.yml
@@ -5,11 +5,11 @@
   become: yes
   roles:
     - firewall
-    # - docker
-    - nginx-proxy
-    # - portainer
-    # - lnm
-    # - filebrowser
-    # - pihole
-    # - cron
-    # - ollama
+    - docker
+    # - nginx-proxy
+    - portainer
+    - lnm
+    - filebrowser
+    - pihole
+    - cron
+    - ollama
