--- a/playbooks/setup.yml
+++ b/playbooks/setup.yml
@@ -5,12 +5,14 @@
   become: yes
   roles:
     - firewall
-    # - docker
+    - docker
+    - traefik
+    - n8n
     # - nginx-proxy
-    # - portainer
-    # - lnm
-    # - filebrowser
-    # - pihole
-    # - cron
-    # - ollama
+    - portainer
+    - lnm
+    - filebrowser
+    - pihole
+    - cron
+    - ollama
     - homepage
