--- a/playbooks/files/homepage/docker-compose.yml
+++ b/playbooks/files/homepage/docker-compose.yml
@@ -11,3 +11,15 @@ services:
     environment:
       PUID: $PUID
       PGID: $PGID
+    networks:
+      - traefik
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.homepage.rule=Host(`homepage.eq-01.pi.hole`)"
+      - "traefik.http.routers.homepage.entrypoints=web"
+      - "traefik.http.routers.homepage.service=homepage"
+      - "traefik.http.services.homepage.loadbalancer.server.port=3000"
+
+networks:
+  traefik:
+    external: true
