--- a/playbooks/files/n8n/docker-compose.yml
+++ b/playbooks/files/n8n/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "5678:5678"
     labels:
-      - traefik.enable=true
+      - traefik.enable=false
       - traefik.http.routers.n8n.rule=Host(`${SUBDOMAIN}.${DOMAIN_NAME}`)
       - traefik.http.routers.n8n.tls=true
       - traefik.http.routers.n8n.entrypoints=web,websecure
