--- a/playbooks/files/traefik/docker-compose.yml
+++ b/playbooks/files/traefik/docker-compose.yml
@@ -26,6 +26,12 @@ services:
     volumes:
       - /home/ansible-user/traefik/traefik_data:/letsencrypt
       - /var/run/docker.sock:/var/run/docker.sock:ro
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik.rule=Host(`traefik.eq-01.pi.hole`)"
+      - "traefik.http.routers.traefik.entrypoints=web"
+      - "traefik.http.routers.traefik.service=traefik"
+      - "traefik.http.services.traefik.loadbalancer.server.port=8080"
 
 networks:
   traefik:
