--- a/playbooks/files/filebrowser/docker-compose.yml
+++ b/playbooks/files/filebrowser/docker-compose.yml
@@ -9,4 +9,16 @@ services:
     volumes:
       - /home/ansible-user:/srv
       - //home/ansible-user/filebrowser/filebrowser.db:/database.db
-      - /home/ansible-user/filebrowser/filebrowser.json:/.filebrowser.json 
+      - /home/ansible-user/filebrowser/filebrowser.json:/.filebrowser.json
+    networks:
+      - traefik
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.filebrowser.rule=Host(`filebrowser.eq-01.pi.hole`)"
+      - "traefik.http.routers.filebrowser.entrypoints=web"
+      - "traefik.http.routers.filebrowser.service=filebrowser"
+      - "traefik.http.services.filebrowser.loadbalancer.server.port=80"
+
+networks:
+  traefik:
+    external: true
