--- a/playbooks/files/lnm/docker-compose.yml
+++ b/playbooks/files/lnm/docker-compose.yml
@@ -8,3 +8,15 @@ services:
      - '3000:3000'
     volumes:
       - /home/ansible-user/lnm/grafana:/var/lib/grafana
+    networks:
+      - traefik
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.grafana.rule=Host(`grafana.eq-01.pi.hole`)"
+      - "traefik.http.routers.grafana.entrypoints=web"
+      - "traefik.http.routers.grafana.service=grafana"
+      - "traefik.http.services.grafana.loadbalancer.server.port=3000"
+
+networks:
+  traefik:
+    external: true
