--- a/playbooks/files/pihole/docker-compose.yml
+++ b/playbooks/files/pihole/docker-compose.yml
@@ -18,3 +18,15 @@ services:
       - '/home/ansible-user/pihole/etc-dnsmasq.d:/etc/dnsmasq.d'
     #   https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
     restart: unless-stopped
+    networks:
+      - traefik
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.pihole.rule=Host(`pihole.eq-01.pi.hole`)"
+      - "traefik.http.routers.pihole.entrypoints=web"
+      - "traefik.http.routers.pihole.service=pihole"
+      - "traefik.http.services.pihole.loadbalancer.server.port=80"
+
+networks:
+  traefik:
+    external: true
