--- a/playbooks/setup.yml
+++ b/playbooks/setup.yml
@@ -6,12 +6,12 @@
   roles:
     # - firewall
     # - docker
-    - traefik
-    - portainer
-    - pihole
-    - filebrowser
-    - lnm
-    # - n8n
+    # - traefik
+    # - portainer
+    # - pihole
+    # - filebrowser
+    # - lnm
+    - n8n
     # - cron
     # - ollama
     - homepage
