--- a/playbooks/files/lnm/docker-compose.yml
+++ b/playbooks/files/lnm/docker-compose.yml
@@ -13,8 +13,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.grafana.rule=Host(`grafana.eq-01.pi.hole`)"
-      - "traefik.http.routers.grafana.entrypoints=web"
+      - "traefik.http.routers.grafana.entrypoints=websecure"
       - "traefik.http.routers.grafana.service=grafana"
+      - "traefik.http.routers.grafana.tls.certresolver=localtlschallenge"
       - "traefik.http.services.grafana.loadbalancer.server.port=3000"
 
 networks:
