--- a/playbooks/files/filebrowser/docker-compose.yml
+++ b/playbooks/files/filebrowser/docker-compose.yml
@@ -15,8 +15,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.filebrowser.rule=Host(`filebrowser.eq-01.pi.hole`)"
-      - "traefik.http.routers.filebrowser.entrypoints=web"
+      - "traefik.http.routers.filebrowser.entrypoints=websecure"
       - "traefik.http.routers.filebrowser.service=filebrowser"
+      - "traefik.http.routers.filebrowser.tls.certresolver=localtlschallenge"
       - "traefik.http.services.filebrowser.loadbalancer.server.port=80"
 
 networks:
