--- a/playbooks/files/ollama/docker-compose.yml
+++ b/playbooks/files/ollama/docker-compose.yml
@@ -30,8 +30,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.ollama.rule=Host(`ollama.eq-01.pi.hole`)"
-      - "traefik.http.routers.ollama.entrypoints=web"
+      - "traefik.http.routers.ollama.entrypoints=websecure"
       - "traefik.http.routers.ollama.service=ollama"
+      - "traefik.http.routers.ollama.tls.certresolver=localtlschallenge"
       - "traefik.http.services.ollama.loadbalancer.server.port=11434"
 
 networks:
