--- a/playbooks/files/pihole/docker-compose.yml
+++ b/playbooks/files/pihole/docker-compose.yml
@@ -23,8 +23,9 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.pihole.rule=Host(`pihole.eq-01.pi.hole`)"
-      - "traefik.http.routers.pihole.entrypoints=web"
+      - "traefik.http.routers.pihole.entrypoints=websecure"
       - "traefik.http.routers.pihole.service=pihole"
+      - "traefik.http.routers.pihole.tls.certresolver=localtlschallenge"
       - "traefik.http.services.pihole.loadbalancer.server.port=80"
 
 networks:
