Updated config location

--- a/playbooks/files/cron/archive-notion/Dockerfile
+++ b/playbooks/files/cron/archive-notion/Dockerfile
@@ -5,6 +5,7 @@ COPY secrets/.env config/.env
 
 RUN wget https://raw.githubusercontent.com/prithviraj-chaudhuri/shortcut-scripts/refs/heads/main/requirements.txt -O requirements.txt
 RUN pip install -r /opt/scripts/requirements.txt
-RUN wget https://raw.githubusercontent.com/prithviraj-chaudhuri/shortcut-scripts/refs/heads/main/download-clear-archive-notion.py -O download-clear-archive-notion.py
+RUN wget https://raw.githubusercontent.com/prithviraj-chaudhuri/shortcut-scripts/refs/heads/main/archive-notion-tasks/download-clear-archive-notion.py -O archive-notion-tasks/download-clear-archive-notion.py
+WORKDIR /opt/scripts/archive-notion-tasks
 
 CMD ["python", "download-clear-archive-notion.py"]
