--- a/playbooks/files/homepage/config/services.yaml
+++ b/playbooks/files/homepage/config/services.yaml
@@ -37,6 +37,10 @@
         icon: n8n.png
         href: https://n8n.eq-01.pi.hole/
         description: N8N
+    - Adminer:
+        icon: adminer.png
+        href: https://adminer.eq-01.pi.hole/
+        description: Adminer
 
 # - Projects:
 #     - My Third Service:
