--- a/playbooks/files/ollama/docker-compose.yml
+++ b/playbooks/files/ollama/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - "traefik.http.services.chat.loadbalancer.server.port=8080"
 
   ollama:
-    image: ollama/ollama:latest
+    image: ollama/ollama:0.5.7
     container_name: ollama
     ports:
       - "9555:11434"
