--- a/playbooks/roles/github-runner/tasks/main.yml
+++ b/playbooks/roles/github-runner/tasks/main.yml
@@ -7,12 +7,10 @@
     - Dockerfile
     - entrypoint.sh
 
-- name: Copy .env files in
+- name: Copy secrets files in
   copy: 
-    src: github-runner/secrets/{{ item }}
-    dest: /home/ansible-user/github-runner/
-  loop:
-    - .env
+    src: github-runner/secrets
+    dest: /home/ansible-user/github-runner/home
 
 - name: Remove github-runner
   shell: cd github-runner && docker compose down && docker compose rm
