--- a/playbooks/files/github-runner/Dockerfile
+++ b/playbooks/files/github-runner/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /home/github-runner
 
 # Install dependencies
 RUN apt update -y && apt upgrade -y && apt install -y \
-    curl jq libicu-dev python3 ansible openssh-client
+    curl jq libicu-dev python3 ansible openssh-client build-essential
 
 # Download and extract the GitHub Actions runner
 RUN curl -o actions-runner-linux-x64-2.323.0.tar.gz -L https://github.com/actions/runner/releases/download/v2.323.0/actions-runner-linux-x64-2.323.0.tar.gz && \
