--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,11 @@ jobs:
         with:
           repository: prithviraj-chaudhuri/home-lab
           fetch-depth: 0
+          path: /tmp
+
+      - name: Copy secrets
+        run: cp -r /home/github-runner/secrets /tmp/home-lab/
 
       - name: Run make setup
+        working-directory: /tmp/home-lab
         run: make setup
