Add Generate Resume form link to bookmarks.yaml

--- a/playbooks/files/homepage/config/bookmarks.yaml
+++ b/playbooks/files/homepage/config/bookmarks.yaml
@@ -14,3 +14,8 @@
     - Home Lab:
         - abbr: HL
           href: https://github.com/prithviraj-chaudhuri/home-lab
+
+- Forms:
+    - Generate Resume:
+        - abbr: GS
+          href: https://n8n.eq-01.pi.hole/form/b6e2f31e-4ffd-4855-bccd-d26055a887cf
